2008-08-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* NEWS:
	* configure.in: updated for 2.23.6.

2008-07-30  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: remove libsounds from SUBDIRS, too

2008-07-29  Jens Granseuer  <jensgr@gmx.net>

	* capplets/Makefile.am:
	* configure.in: fix build without libcanberra

2008-07-29  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Make sure we require libcanberra 0.4
	to get the .disabled support

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* configure.in: Remove libsounds and esound usage, check for
	libcanberra instead (Closes: #542979)

Thu Jul 24 15:34:50 2008  Søren Sandmann  <sandmann@redhat.com>

	* configure.in
	* NEWS
	Updated for 2.23.5

	* configure.in, Makefile.am
	Make typing-break a conditional to make it distcheck
	
2008-07-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* Makefile.am:
	* vfs-methods/*: removed VFS methods code.

2008-07-15  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: add
	capplets/default-applications/gnome-default-applications.pc to
	generated files

2008-06-18  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: bump gnome-desktop requirement to 2.23.5

2008-06-18  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* configure.in: require intltool >= 0.40

2008-06-16  Rodrigo Moya <rodrigo@gnome-db.org>

	* NEWS:
	* configure.in: update for 2.23.4
	Increased gnome-desktop version requirement

==================== 2.23.3 ====================

2008-06-04  Jens Granseuer  <jensgr@gmx.net>

	* NEWS: updated for 2.23.3

2008-06-01  Thomas Wood  <thos@gnome.org>

	* configure.in:
	* vfs-methods/Makefile.am:
	Remove themus from build.

2008-05-17  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.3

==================== 2.23.2 ====================

2008-05-17  Sebastien Bacher  <seb128@ubuntu.com>

	* configure.in: don't require libbackground to build

2008-05-17  Jens Granseuer  <jensgr@gmx.net>

	* NEWS: