@@ -1,3 +1,8 @@
+2008-08-11  Jens Granseuer  <jensgr@gmx.net>
+
+	* xrandr-capplet.c: (run_application): fail gracefully if we cannot
+	get a screen
+
 2008-08-08  Jens Granseuer  <jensgr@gmx.net>
 
 	* xrandr-capplet.c: (on_screen_changed), (rebuild_gui),
