@@ -1,3 +1,7 @@
+2008-08-11  Jens Granseuer  <jensgr@gmx.net>
+
+	* configure.in: require gnome-desktop 2.23.90
+
 2008-08-04  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* NEWS:
